--- a/Python /pydeseq2CN.ipynb
+++ b/Python /pydeseq2CN.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "b66f720c-3b41-4e88-a886-3ffc2cf5357f",
    "metadata": {},
    "outputs": [],
@@ -1013,29 +1013,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1c1d2c8f-f08c-403d-a579-ed51bb063f7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "2fe542c7-b172-4456-9ea2-15c303427460",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load data\n",
-    "counts = pd.read_csv('data_simulation/sim1_sampled_cnv/rna_mixed_cnv.csv', index_col=0)\n",
-    "counts = counts.T\n",
-    "metadata = pd.read_csv('data_simulation/sim1_sampled_cnv/metadata.csv', index_col=0)"
+    "rna_counts = pd.read_csv('data_simulation/sim4_omics/rna_sim_luad.csv', index_col=0)\n",
+    "rna_counts = rna_counts.T\n",
+    "metadata = pd.read_csv('data_simulation/sim4_omics/metadata.csv', index_col=0)\n",
+    "#cnv_tumor = pd.read_csv('data_simulation/cnv_tumor.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86e67307-620e-4778-a155-e682e688cd2b",
+   "metadata": {},
+   "source": [
+    "#### Generate CN corrected RNA counts matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 138,
+   "id": "3a5b559b-33de-40fd-bb3b-9d1b850767cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def create_matrix(rows, cols, min_val, max_val):\n",
+    "    return [[random.randint(min_val, max_val) for _ in range(cols)] for _ in range(rows)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "08f220b1-7108-46fb-aca0-67b40ff4d505",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rna_cnv_count_matrix(rna_counts, cnv_tumor):\n",
+    "    cnv_normal_mat = create_matrix(19979, 45, 2, 2)\n",
+    "    cnv_normal_mat= np.array(cnv_normal)\n",
+    "    cnv_tumor_mat = np.array(cnv_tumor)\n",
+    "    cnv = np.concatenate((cnv_tumor_mat, cnv_normal_mat), axis=1) \n",
+    "    cnv = cnv/2\n",
+    "\n",
+    "    counts_mat = np.array(rna_counts)\n",
+    "    rna_counts_cnv = np.multiply(counts_mat, cnv)\n",
+    "    rna_counts_cnv = pd.DataFrame(rna_counts_cnv)\n",
+    "    \n",
+    "    # Reassign rownames and column names\n",
+    "    gene_id = rna_counts.index\n",
+    "    gene_id = pd.DataFrame(gene_id)\n",
+    "    gene_id.rename(columns = {0:'geneID'}, inplace = True) \n",
+    "    rna_counts_cnv = pd.concat([gene_id, rna_counts_cnv], axis=1)\n",
+    "    rna_counts_cnv.set_index('geneID', inplace = True)\n",
+    "    sample_id = rna_counts.columns\n",
+    "    rna_counts_cnv.columns = sample_id\n",
+    "    rna_counts_cnv = rna_counts_cnv.T\n",
+    "\n",
+    "    return rna_counts_cnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "97dfca70-4a39-470e-be9e-9c6c80f64ca5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rna_counts_cnv = rna_cnv_count_matrix(rna_counts, cnv_tumor)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a755d3c-7428-45c3-a2c7-76e2f25a1528",
+   "metadata": {},
+   "source": [
+    "#### Model fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "5266efef-5d84-4377-a341-ac7ccf7aad6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_pydeseqCN(counts, metadata):\n",
+    "def test_pydeseqCN(rna_counts, metadata):\n",
     "    \n",
     "    # Create dds object\n",
     "    dds = DeseqDataSet(\n",
-    "        counts=counts,\n",
+    "        counts=rna_counts,\n",
     "        metadata=metadata,\n",
     "        design_factors=\"condition\",\n",
     "        refit_cooks=False,\n",
@@ -1062,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "e9d38e62-c8b4-483e-b88b-6b3e9c212e03",
    "metadata": {},
    "outputs": [
@@ -1071,19 +1150,19 @@
      "output_type": "stream",
      "text": [
       "Fitting size factors...\n",
-      "... done in 0.05 seconds.\n",
+      "... done in 0.04 seconds.\n",
       "\n",
       "Fitting dispersions...\n",
-      "... done in 1.11 seconds.\n",
+      "... done in 1.01 seconds.\n",
       "\n",
       "Fitting dispersion trend curve...\n",
-      "... done in 0.71 seconds.\n",
+      "... done in 0.63 seconds.\n",
       "\n",
       "Fitting MAP dispersions...\n",
-      "... done in 1.30 seconds.\n",
+      "... done in 1.37 seconds.\n",
       "\n",
       "Fitting LFCs...\n",
-      "... done in 0.63 seconds.\n",
+      "... done in 0.56 seconds.\n",
       "\n",
       "Running Wald tests...\n",
       "... done in 0.44 seconds.\n",
@@ -1096,59 +1175,18 @@
      "output_type": "stream",
      "text": [
       "Log2 fold change & Wald test p-value: condition B vs A\n",
-      "           baseMean  log2FoldChange     lfcSE       stat        pvalue  \\\n",
-      "g1         2.171280        1.933201  0.369055   5.238243  1.621123e-07   \n",
-      "g2        15.511650        2.172559  0.331971   6.544414  5.972916e-11   \n",
-      "g3       235.482136        1.838344  0.230182   7.986465  1.388629e-15   \n",
-      "g4      1695.155932        1.985842  0.224824   8.832867  1.020267e-18   \n",
-      "g5       459.244451        1.928127  0.178013  10.831404  2.443787e-27   \n",
-      "...             ...             ...       ...        ...           ...   \n",
-      "g14996  9719.742293        0.057358  0.152538   0.376026  7.068979e-01   \n",
-      "g14997    18.194573        0.244528  0.373721   0.654307  5.129141e-01   \n",
-      "g14998    96.463547       -0.023445  0.193009  -0.121473  9.033166e-01   \n",
-      "g14999   376.386660       -0.387665  0.377669  -1.026467  3.046715e-01   \n",
-      "g15000   443.768206        0.077620  0.157256   0.493590  6.215960e-01   \n",
-      "\n",
-      "                padj  \n",
-      "g1      5.539144e-06  \n",
-      "g2      2.627382e-09  \n",
-      "g3      7.629828e-14  \n",
-      "g4      6.457385e-17  \n",
-      "g5      2.320051e-25  \n",
-      "...              ...  \n",
-      "g14996  9.997058e-01  \n",
-      "g14997  9.997058e-01  \n",
-      "g14998  9.997058e-01  \n",
-      "g14999  9.997058e-01  \n",
-      "g15000  9.997058e-01  \n",
-      "\n",
-      "[15000 rows x 6 columns]\n",
-      "Shrunk log2 fold change & Wald test p-value: condition B vs A\n",
-      "           baseMean  log2FoldChange     lfcSE       stat        pvalue  \\\n",
-      "g1         2.171280        1.787447  0.370728   5.238243  1.621123e-07   \n",
-      "g2        15.511650        2.068579  0.336068   6.544414  5.972916e-11   \n",
-      "g3       235.482136        1.776324  0.232108   7.986465  1.388629e-15   \n",
-      "g4      1695.155932        1.916474  0.225277   8.832867  1.020267e-18   \n",
-      "g5       459.244451        1.885262  0.178908  10.831404  2.443787e-27   \n",
-      "...             ...             ...       ...        ...           ...   \n",
-      "g14996  9719.742293        0.086555  0.140919   0.376026  7.068979e-01   \n",
-      "g14997    18.194573        0.063588  0.250671   0.654307  5.129141e-01   \n",
-      "g14998    96.463547       -0.012960  0.163342  -0.121473  9.033166e-01   \n",
-      "g14999   376.386660       -0.101114  0.254509  -1.026467  3.046715e-01   \n",
-      "g15000   443.768206        0.051924  0.141342   0.493590  6.215960e-01   \n",
-      "\n",
-      "                padj  \n",
-      "g1      5.539144e-06  \n",
-      "g2      2.627382e-09  \n",
-      "g3      7.629828e-14  \n",
-      "g4      6.457385e-17  \n",
-      "g5      2.320051e-25  \n",
-      "...              ...  \n",
-      "g14996  9.997058e-01  \n",
-      "g14997  9.997058e-01  \n",
-      "g14998  9.997058e-01  \n",
-      "g14999  9.997058e-01  \n",
-      "g15000  9.997058e-01  \n",
+      "            baseMean  log2FoldChange     lfcSE      stat    pvalue      padj\n",
+      "G 1        28.045812       -0.013851  0.239203 -0.057904  0.953825  0.997452\n",
+      "G 2       213.968843       -0.003252  0.113893 -0.028550  0.977224  0.997581\n",
+      "G 3       537.813818       -0.111747  0.063519 -1.759280  0.078530  0.938727\n",
+      "G 4        14.618679        0.247491  0.213002  1.161915  0.245270  0.983612\n",
+      "G 5      2190.877102       -0.070562  0.071264 -0.990147  0.322102  0.986597\n",
+      "...              ...             ...       ...       ...       ...       ...\n",
+      "G 14996   529.075713       -0.213961  0.148122 -1.444497  0.148599  0.976378\n",
+      "G 14997   915.648648        0.041544  0.087254  0.476128  0.633983  0.994079\n",
+      "G 14998    11.863840        0.325259  0.217284  1.496932  0.134411  0.960251\n",
+      "G 14999   222.873989        0.150188  0.094958  1.581621  0.113736  0.950971\n",
+      "G 15000   398.453070       -0.015691  0.049677 -0.315862  0.752107  0.996376\n",
       "\n",
       "[15000 rows x 6 columns]\n"
      ]
@@ -1157,13 +1195,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "... done in 1.26 seconds.\n",
+      "/opt/anaconda3/lib/python3.11/site-packages/pydeseq2/utils.py:1249: RuntimeWarning: overflow encountered in exp\n",
+      "  counts - (counts + size) / (1 + size * np.exp(-xbeta - offset))\n",
+      "/opt/anaconda3/lib/python3.11/site-packages/pydeseq2/utils.py:1249: RuntimeWarning: overflow encountered in exp\n",
+      "  counts - (counts + size) / (1 + size * np.exp(-xbeta - offset))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shrunk log2 fold change & Wald test p-value: condition B vs A\n",
+      "            baseMean  log2FoldChange     lfcSE      stat    pvalue      padj\n",
+      "G 1        28.045812       -0.000018  0.011768 -0.057904  0.953825  0.997452\n",
+      "G 2       213.968843       -0.000013  0.011744 -0.028550  0.977224  0.997581\n",
+      "G 3       537.813818       -0.001960  0.011878 -1.759280  0.078530  0.938727\n",
+      "G 4        14.618679        0.000380  0.012244  1.161915  0.245270  0.983612\n",
+      "G 5      2190.877102       -0.000891  0.011619 -0.990147  0.322102  0.986597\n",
+      "...              ...             ...       ...       ...       ...       ...\n",
+      "G 14996   529.075713       -0.000663  0.011426 -1.444497  0.148599  0.976378\n",
+      "G 14997   915.648648        0.000436  0.011813  0.476128  0.633983  0.994079\n",
+      "G 14998    11.863840        0.000480  0.012372  1.496932  0.134411  0.960251\n",
+      "G 14999   222.873989        0.001163  0.012185  1.581621  0.113736  0.950971\n",
+      "G 15000   398.453070       -0.000409  0.011482 -0.315862  0.752107  0.996376\n",
+      "\n",
+      "[15000 rows x 6 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "... done in 1.78 seconds.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "res2_cnv = test_pydeseqCN(counts, metadata)"
+    "res = test_pydeseqCN(rna_counts, metadata)"
    ]
   },
   {
@@ -1176,31 +1245,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "6282e460-42b5-4633-b2fc-a82e2dc9ce98",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace this with the path to directory where you would like results to be saved\n",
-    "OUTPUT_PATH = \"data_simulation/results/\"\n",
+    "OUTPUT_PATH = \"data_simulation/results/sim_4/\"\n",
     "os.makedirs(OUTPUT_PATH, exist_ok=True)  # Create path if it doesn't exist\n",
-    "res2_cnv.to_csv(os.path.join(OUTPUT_PATH, \"res2_cnv.csv\"))"
+    "res.to_csv(os.path.join(OUTPUT_PATH, \"res_sim_luad.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "7480b3cf-c5f3-42bd-b07e-2a9abf9a160b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>baseMean</th>\n",
+       "      <th>log2FoldChange</th>\n",
+       "      <th>lfcSE</th>\n",
+       "      <th>stat</th>\n",
+       "      <th>pvalue</th>\n",
+       "      <th>padj</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>G 1</th>\n",
+       "      <td>28.045812</td>\n",
+       "      <td>-0.000018</td>\n",
+       "      <td>0.011768</td>\n",
+       "      <td>-0.057904</td>\n",
+       "      <td>0.953825</td>\n",
+       "      <td>0.997452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G 2</th>\n",
+       "      <td>213.968843</td>\n",
+       "      <td>-0.000013</td>\n",
+       "      <td>0.011744</td>\n",
+       "      <td>-0.028550</td>\n",
+       "      <td>0.977224</td>\n",
+       "      <td>0.997581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G 3</th>\n",
+       "      <td>537.813818</td>\n",
+       "      <td>-0.001960</td>\n",
+       "      <td>0.011878</td>\n",
+       "      <td>-1.759280</td>\n",
+       "      <td>0.078530</td>\n",
+       "      <td>0.938727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G 4</th>\n",
+       "      <td>14.618679</td>\n",
+       "      <td>0.000380</td>\n",
+       "      <td>0.012244</td>\n",
+       "      <td>1.161915</td>\n",
+       "      <td>0.245270</td>\n",
+       "      <td>0.983612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G 5</th>\n",
+       "      <td>2190.877102</td>\n",
+       "      <td>-0.000891</td>\n",
+       "      <td>0.011619</td>\n",
+       "      <td>-0.990147</td>\n",
+       "      <td>0.322102</td>\n",
+       "      <td>0.986597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G 14996</th>\n",
+       "      <td>529.075713</td>\n",
+       "      <td>-0.000663</td>\n",
+       "      <td>0.011426</td>\n",
+       "      <td>-1.444497</td>\n",
+       "      <td>0.148599</td>\n",
+       "      <td>0.976378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G 14997</th>\n",
+       "      <td>915.648648</td>\n",
+       "      <td>0.000436</td>\n",
+       "      <td>0.011813</td>\n",
+       "      <td>0.476128</td>\n",
+       "      <td>0.633983</td>\n",
+       "      <td>0.994079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G 14998</th>\n",
+       "      <td>11.863840</td>\n",
+       "      <td>0.000480</td>\n",
+       "      <td>0.012372</td>\n",
+       "      <td>1.496932</td>\n",
+       "      <td>0.134411</td>\n",
+       "      <td>0.960251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G 14999</th>\n",
+       "      <td>222.873989</td>\n",
+       "      <td>0.001163</td>\n",
+       "      <td>0.012185</td>\n",
+       "      <td>1.581621</td>\n",
+       "      <td>0.113736</td>\n",
+       "      <td>0.950971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G 15000</th>\n",
+       "      <td>398.453070</td>\n",
+       "      <td>-0.000409</td>\n",
+       "      <td>0.011482</td>\n",
+       "      <td>-0.315862</td>\n",
+       "      <td>0.752107</td>\n",
+       "      <td>0.996376</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15000 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            baseMean  log2FoldChange     lfcSE      stat    pvalue      padj\n",
+       "G 1        28.045812       -0.000018  0.011768 -0.057904  0.953825  0.997452\n",
+       "G 2       213.968843       -0.000013  0.011744 -0.028550  0.977224  0.997581\n",
+       "G 3       537.813818       -0.001960  0.011878 -1.759280  0.078530  0.938727\n",
+       "G 4        14.618679        0.000380  0.012244  1.161915  0.245270  0.983612\n",
+       "G 5      2190.877102       -0.000891  0.011619 -0.990147  0.322102  0.986597\n",
+       "...              ...             ...       ...       ...       ...       ...\n",
+       "G 14996   529.075713       -0.000663  0.011426 -1.444497  0.148599  0.976378\n",
+       "G 14997   915.648648        0.000436  0.011813  0.476128  0.633983  0.994079\n",
+       "G 14998    11.863840        0.000480  0.012372  1.496932  0.134411  0.960251\n",
+       "G 14999   222.873989        0.001163  0.012185  1.581621  0.113736  0.950971\n",
+       "G 15000   398.453070       -0.000409  0.011482 -0.315862  0.752107  0.996376\n",
+       "\n",
+       "[15000 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#stat_res.plot_MA(s=10)"
+    "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "488a647e-7e6f-4d57-89cb-b80745302117",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ee359b19-ce89-4762-8d7f-a9a418ba3057",
    "metadata": {},
    "outputs": [],
    "source": []
