--- a/simulation/simulations.Rmd
+++ b/simulation/simulations.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Simulate RNAseq counts"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 date: "2024-05-07"
 ---
 
