test_glm_python

--- a/Python /test_glm.ipynb
+++ b/Python /test_glm.ipynb
@@ -837,7 +837,7 @@
    "id": "9eb22471-a572-4fbd-b624-c959c888e575",
    "metadata": {},
    "source": [
-    "### Test classical GLM"
+    "### Test GLM"
    ]
   },
   {
