--- a/Python /pydeseq2CN.ipynb
+++ b/Python /pydeseq2CN.ipynb
@@ -12,13 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "f3dc930a-450a-4306-b5ac-7aeb08782ec8",
+   "execution_count": null,
+   "id": "ab891044-1489-496f-9b4a-cf366fa86bf8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import time\n",
     "import multiprocessing\n",
     "import warnings\n",
     "from math import floor\n",
@@ -28,10 +26,7 @@
     "from typing import Optional\n",
     "from typing import Tuple\n",
     "from typing import Union\n",
-    "from typing import cast\n",
-    "\n",
-    "import os\n",
-    "import pickle as pkl"
+    "from typing import cast"
    ]
   },
   {
