--- a/Python/tests/test_irls_glm.ipynb
+++ b/Python/tests/test_irls_glm.ipynb
@@ -808,36 +808,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 1,
    "id": "e57774b3-7e59-4608-812c-58c3cb177e3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/mh/vvy722dj18x7xj41n2qbdzs80000gn/T/ipykernel_1328/3707227585.py:26: RuntimeWarning: invalid value encountered in log\n",
-      "  y = np.log(counts - lib_size - cnv + 0.1)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "array must not contain infs or NaNs",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[140], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m irls(counts, size_factors, design_matrix, lib_size, cnv, disp)\n",
-      "Cell \u001b[0;32mIn[139], line 28\u001b[0m, in \u001b[0;36mirls\u001b[0;34m(counts, size_factors, design_matrix, cnv, lib_size, disp, min_mu, beta_tol, min_beta, max_beta, optimizer, maxiter)\u001b[0m\n\u001b[1;32m     26\u001b[0m     y \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlog(counts \u001b[38;5;241m-\u001b[39m lib_size \u001b[38;5;241m-\u001b[39m cnv \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m0.1\u001b[39m)\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;66;03m#y = np.log(counts / size_factors + 0.1)\u001b[39;00m\n\u001b[0;32m---> 28\u001b[0m     beta_init \u001b[38;5;241m=\u001b[39m solve(R, Q\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m@\u001b[39m y)\n\u001b[1;32m     29\u001b[0m     beta \u001b[38;5;241m=\u001b[39m beta_init\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:  \u001b[38;5;66;03m# Initialise intercept with log base mean\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/scipy/linalg/_basic.py:149\u001b[0m, in \u001b[0;36msolve\u001b[0;34m(a, b, lower, overwrite_a, overwrite_b, check_finite, assume_a, transposed)\u001b[0m\n\u001b[1;32m    146\u001b[0m b_is_1D \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    148\u001b[0m a1 \u001b[38;5;241m=\u001b[39m atleast_2d(_asarray_validated(a, check_finite\u001b[38;5;241m=\u001b[39mcheck_finite))\n\u001b[0;32m--> 149\u001b[0m b1 \u001b[38;5;241m=\u001b[39m atleast_1d(_asarray_validated(b, check_finite\u001b[38;5;241m=\u001b[39mcheck_finite))\n\u001b[1;32m    150\u001b[0m n \u001b[38;5;241m=\u001b[39m a1\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m    152\u001b[0m overwrite_a \u001b[38;5;241m=\u001b[39m overwrite_a \u001b[38;5;129;01mor\u001b[39;00m _datacopied(a1, a)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/scipy/_lib/_util.py:240\u001b[0m, in \u001b[0;36m_asarray_validated\u001b[0;34m(a, check_finite, sparse_ok, objects_ok, mask_ok, as_inexact)\u001b[0m\n\u001b[1;32m    238\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmasked arrays are not supported\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    239\u001b[0m toarray \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray_chkfinite \u001b[38;5;28;01mif\u001b[39;00m check_finite \u001b[38;5;28;01melse\u001b[39;00m np\u001b[38;5;241m.\u001b[39masarray\n\u001b[0;32m--> 240\u001b[0m a \u001b[38;5;241m=\u001b[39m toarray(a)\n\u001b[1;32m    241\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m objects_ok:\n\u001b[1;32m    242\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m a\u001b[38;5;241m.\u001b[39mdtype \u001b[38;5;129;01mis\u001b[39;00m np\u001b[38;5;241m.\u001b[39mdtype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mO\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/numpy/lib/function_base.py:630\u001b[0m, in \u001b[0;36masarray_chkfinite\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m    628\u001b[0m a \u001b[38;5;241m=\u001b[39m asarray(a, dtype\u001b[38;5;241m=\u001b[39mdtype, order\u001b[38;5;241m=\u001b[39morder)\n\u001b[1;32m    629\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m a\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;241m.\u001b[39mchar \u001b[38;5;129;01min\u001b[39;00m typecodes[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAllFloat\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np\u001b[38;5;241m.\u001b[39misfinite(a)\u001b[38;5;241m.\u001b[39mall():\n\u001b[0;32m--> 630\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    631\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marray must not contain infs or NaNs\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    632\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m a\n",
-      "\u001b[0;31mValueError\u001b[0m: array must not contain infs or NaNs"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "irls(counts, size_factors, design_matrix, lib_size, cnv, disp)"
+    "#irls(counts, size_factors, design_matrix, lib_size, cnv, disp)"
    ]
   }
  ],
